--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo-build-properties": "~0.8.3",
     "expo-camera": "~13.4.4",
     "expo-image-picker": "~14.3.2",
+    "expo-location": "~16.1.0",
     "expo-status-bar": "~1.6.0",
     "jwt-decode": "^4.0.0",
     "mime": "^4.0.1",
@@ -47,8 +48,7 @@
     "redux": "^5.0.1",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^3.1.0",
-    "styled-components": "^6.1.8",
-    "expo-location": "~16.1.0"
+    "styled-components": "^6.1.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
